# arm2_mujoco

./: .gitignore  README.md
src/arm2_moveit_config/: CMakeLists.txt  README.md  package.xml
src/arm2_moveit_config/config/: arm2.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/arm2_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
src/dmbot_serial/: CMakeLists.txt  README.md  package.xml
src/dmbot_serial/include/dmbot_serial/: debugger_node.hpp  usb2canfd_dm_node.hpp
src/dmbot_serial/include/dmbot_serial/protocol/: damiao.h
src/dmbot_serial/launch/: dev_sn.launch.py  test_motor.launch.py
src/dmbot_serial/src/: debugger_node.cpp  test.cpp  usb2canfd_dm_node.cpp
src/dmbot_serial/src/protocol/: damiao.cpp
src/rc_arm2_bringup/: CMakeLists.txt  README.md  package.xml
src/rc_arm2_bringup/launch/: arm2_real_system.launch.py  arm2_sim_system.launch.py
src/rc_arm2_control/: CMakeLists.txt  README.md  package.xml
src/rc_arm2_control/config/: arm2_control.yaml
src/rc_arm2_control/launch/: arm2_sim_control.launch.py
src/rc_arm2_control/scripts/: arm2_mujoco_sim.py  send_sample_trajectory.py
src/rc_arm2_control/src/: arm2_torque_trajectory_controller.cpp
src/rc_arm2_description/: CMakeLists.txt  arm2.urdf  package.xml
src/rc_arm2_description/meshes/: base_link.STL  l1.STL  l4.STL
src/rc_arm2_middleware/: CMakeLists.txt  README.md  package.xml
src/rc_arm2_middleware/config/: action_sets.yaml
src/rc_arm2_middleware/src/: arm2_middleware.cpp
src/rc_arm2_moveit_client/: CMakeLists.txt  README.md  package.xml
src/rc_arm2_moveit_client/action/: PlanToTaskGoal.action
src/rc_arm2_moveit_client/src/: arm2_payload_scene_sync.cpp  arm2_plan_to_task_goal.cpp
src/rc_arm2_msgs/: CMakeLists.txt  package.xml
src/rc_arm2_msgs/msg/: Arm2ControllerState.msg  Arm2MiddlewareCommand.msg  Arm2MiddlewareState.msg
