<?xml version="1.0"?>
<package format="3">
  <name>rc_arm2_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for arm2 controller state and related interfaces.</description>
  <maintainer email="aqua@example.com">aqua</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
